issue:KFXT-90 msg:framework init

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@ http://maven.apache.org/maven-v4_0_0.xsd">
 
     <properties>
         <spring.version>4.1.0.RELEASE</spring.version>
+        <jackson.version>2.4.2</jackson.version>
     </properties>
 
     <dependencies>
@@ -45,6 +46,23 @@ http://maven.apache.org/maven-v4_0_0.xsd">
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
         <!-- servlet -->
@@ -100,6 +118,16 @@ http://maven.apache.org/maven-v4_0_0.xsd">
 
         <!-- log4j -->
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.7</version>
+        </dependency>
+        <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
@@ -127,13 +155,6 @@ http://maven.apache.org/maven-v4_0_0.xsd">
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
             <version>3.2.1</version>
-        </dependency>
-
-        <!-- jackson -->
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.13</version>
         </dependency>
 
     </dependencies>
