--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.rootLogger=DEBUG,A1
-log4j.logger.com.kuitos = DEBUG
+log4j.logger.com.shuyun = DEBUG
 
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
