--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee
 	http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
-    <display-name>Shuyun Customer Service System</display-name>
+    <display-name>Spring MVC4 Seed</display-name>
 
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
